# systemIntegrations_homework

1._File_formats_bonanza/: Article.json
1._File_formats_bonanza/node/: package-lock.json  package.json  read_and_parse.js
1._File_formats_bonanza/node/Article_files/: Article.yaml
1._File_formats_bonanza/python/: read_and_parse.py
1._File_formats_bonanza/python/Article_files/: Article.xml
2._Data_format_translation_servers/Express/: app.js  package-lock.json  package.json
2._Data_format_translation_servers/Express/Article_files/: Article.cvs
2._Data_format_translation_servers/Fast_API/: main.py
2._Data_format_translation_servers/Fast_API/Article_files/: Article.txt
3._Data_servers/Express/: app.js  package-lock.json  package.json
3._Data_servers/Fast_API/: main.py  pyproject.toml  webhook.py
