[tool.poetry]
name = "fast_api"
version = "0.1.0"
description = ""
authors = ["rooslindeboom <rooslindeboom@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
